本地化烈咬陸鯊的標準招式和同步爆發時的招式

--- a/烈咬陸鯊.html
+++ b/烈咬陸鯊.html
@@ -110,11 +110,11 @@ a:hover {
         <th>傷害值</th>
     </tr>
     <tr>
-        <td>Outrage Smasher</td>
+        <td>暴怒粉碎</td>
         <td>一般</td>
         <td>全階段</td>
-        <td>L + R during Synergy Burst</td>
-        <td>反擊 attack pierce. Guard Break. Resists hit stun. 傷害值s yourself when it misses.</td>
+        <td>同步爆發時按 L + R</td>
+        <td>貫穿反擊。可破防。具有受傷抗性。未命中時會傷害自己</td>
         <td>258</td>
     </tr>
 </table><h2>寶可夢招式</h2>
@@ -131,88 +131,88 @@ a:hover {
         <td>龍爪</td>
         <td>一般</td>
         <td>全階段</td>
-        <td>A</td>
-        <td>Transition to Running Stance by holding A in 對戰階段 Phase. Opens opponents for more attacks</td>
+        <td>按 A</td>
+        <td>對戰階段時長按 A 可切換至跑步姿勢。使對手易受攻擊</td>
         <td>80</td>
     </tr>
     <tr>
-        <td>Dig</td>
+        <td>挖洞</td>
         <td>一般</td>
         <td>全階段</td>
-        <td>Forward + A</td>
-        <td>Invincible while submerged. Attack with Y or X.</td>
+        <td>按前 + A</td>
+        <td>潛入地下時無敵。可用 Y 或 X 進行攻擊</td>
         <td>120</td>
     </tr>
     <tr>
-        <td>Dig ~ Cancel</td>
+        <td>挖洞～取消</td>
         <td>無傷害</td>
         <td>全階段</td>
-        <td>R during Dig</td>
+        <td>挖洞時按 R</td>
         <td>無特殊效果</td>
         <td>0</td>
     </tr>
     <tr>
-        <td>Dig ~ Jump</td>
+        <td>挖洞～跳躍</td>
         <td>無傷害</td>
         <td>全階段</td>
-        <td>B during Dig</td>
-        <td>Can transition into all midair attacks</td>
+        <td>挖洞時按 B</td>
+        <td>可接續所有空中攻擊</td>
         <td>0</td>
     </tr>
     <tr>
-        <td>Stone Edge: Standby</td>
+        <td>尖石攻擊：準備</td>
         <td>反擊</td>
         <td>全階段</td>
-        <td>Backward + A</td>
+        <td>按後 + A</td>
         <td>反擊</td>
         <td>0</td>
     </tr>
     <tr>
-        <td>Stone Edge</td>
+        <td>尖石攻擊</td>
         <td>反擊</td>
         <td>全階段</td>
-        <td>Counter opponent's attack during Stone Edge</td>
-        <td>長按 to charge. Power up with Critical Hit. Increases Synergy Gauge. 反擊 Attack pierce</td>
+        <td>尖石攻擊時反擊對手攻擊</td>
+        <td>長按可蓄力。會心一擊時威力提升。增加同步值。貫穿反擊</td>
         <td>136</td>
     </tr>
     <tr>
         <td>地震</td>
         <td>一般</td>
         <td>全階段</td>
-        <td>Midair A</td>
+        <td>空中按 A</td>
         <td>造成大量傷害</td>
         <td>100</td>
     </tr>
     <tr>
-        <td>Dragon Rush</td>
+        <td>龍之俯衝</td>
         <td>一般</td>
         <td>對戰階段</td>
-        <td>Up + A</td>
-        <td>可用R取消. Powers up with Critical Hit & increases Synergy Gauge. Effective against 抓取 Attacks.</td>
+        <td>按上 + A</td>
+        <td>可用 R 取消。會心一擊時威力提升並增加同步值。對抓取攻擊有效</td>
         <td>80</td>
     </tr>
     <tr>
-        <td>Dragon Rush ~ Dig</td>
+        <td>龍之俯衝～挖洞</td>
         <td>一般</td>
         <td>對戰階段</td>
-        <td>Up + Hold A</td>
-        <td>Invincible while submerged. Attack with Y or X.</td>
+        <td>按上 + 長按 A</td>
+        <td>潛入地下時無敵。可用 Y 或 X 進行攻擊</td>
         <td>120</td>
     </tr>
     <tr>
-        <td>Sand Tomb</td>
+        <td>流沙地獄</td>
         <td>抓取</td>
         <td>對戰階段</td>
-        <td>Down + A</td>
-        <td>Transition to Running Stance with R. Powers up with Critical Hit & Increases Synergy Gauge</td>
+        <td>按下 + A</td>
+        <td>按 R 可切換至跑步姿勢。會心一擊時威力提升並增加同步值</td>
         <td>64</td>
     </tr>
     <tr>
-        <td>Sand Tomb: Charge</td>
+        <td>流沙地獄：蓄力</td>
         <td>抓取</td>
         <td>對戰階段</td>
-        <td>Down + Hold A</td>
-        <td>Can grab opponents both on the ground and in midair.</td>
+        <td>按下 + 長按 A</td>
+        <td>可抓取地面和空中的對手</td>
         <td>82</td>
     </tr>
 </table><h2>標準招式</h2>
@@ -226,50 +226,50 @@ a:hover {
         <th>傷害值</th>
     </tr>
     <tr>
-        <td>Running Stance</td>
+        <td>跑步姿勢</td>
         <td>無傷害</td>
         <td>全階段</td>
-        <td>Hold Forward during forward dash step, or Forward + Forward + Forward</td>
-        <td>Gradually increases Synergy Gauge. 可用寶可夢招式取消</td>
+        <td>前衝時長按前，或連按三次前</td>
+        <td>逐漸增加同步值。可用寶可夢招式取消</td>
         <td>0</td>
     </tr>
     <tr>
-        <td>Running Stance ~ Cancel</td>
+        <td>跑步姿勢～取消</td>
         <td>無傷害</td>
         <td>全階段</td>
-        <td>R during Running Stance</td>
+        <td>跑步姿勢時按 R</td>
         <td>無特殊效果</td>
         <td>0</td>
     </tr>
     <tr>
-        <td>Running Stance ~ Jump</td>
+        <td>跑步姿勢～跳躍</td>
         <td>無傷害</td>
         <td>全階段</td>
-        <td>B during Running Stance</td>
+        <td>跑步姿勢時按 B</td>
         <td>無特殊效果</td>
         <td>0</td>
     </tr>
     <tr>
-        <td>Running Stance ~ Weak Attack</td>
+        <td>跑步姿勢～弱攻擊</td>
         <td>一般</td>
         <td>全階段</td>
-        <td>Y, Y during Running Stance</td>
-        <td>Transition to Running Stance with Y, 長按 Y</td>
+        <td>跑步姿勢時按 Y，Y</td>
+        <td>按 Y，長按 Y 可切換至跑步姿勢</td>
         <td>120</td>
     </tr>
     <tr>
-        <td>Running Stance ~ Strong Attack</td>
+        <td>跑步姿勢～強攻擊</td>
         <td>一般</td>
         <td>全階段</td>
-        <td>X during Running Stance</td>
+        <td>跑步姿勢時按 X</td>
         <td>創造連擊機會</td>
         <td>80</td>
     </tr>
     <tr>
-        <td>Running Stance ~ Charge Strong Attack</td>
+        <td>跑步姿勢～蓄力強攻擊</td>
         <td>一般</td>
         <td>全階段</td>
-        <td>Charge and then release X during Running Stance</td>
+        <td>跑步姿勢時蓄力後放開 X</td>
         <td>無特殊效果</td>
         <td>80</td>
     </tr>
@@ -282,6 +282,94 @@ a:hover {
         <th>按鈕組合</th>
         <th>備註</th>
         <th>傷害值</th>
+    </tr>
+    <tr>
+        <td>俯衝攻擊</td>
+        <td>無傷害</td>
+        <td>全階段</td>
+        <td>空中按 R</td>
+        <td>向下俯衝</td>
+        <td>0</td>
+    </tr>
+    <tr>
+        <td>寶可連擊1</td>
+        <td>一般</td>
+        <td>場地階段</td>
+        <td>按 Y，Y</td>
+        <td>切換階段</td>
+        <td>94</td>
+    </tr>
+    <tr>
+        <td>遠距離攻擊</td>
+        <td>一般</td>
+        <td>場地階段</td>
+        <td>按 Y</td>
+        <td>可用寶可夢招式取消。可阻止對手</td>
+        <td>30</td>
+    </tr>
+    <tr>
+        <td>寶可連擊2</td>
+        <td>一般</td>
+        <td>場地階段</td>
+        <td>側身按 Y，Y</td>
+        <td>無特殊效果</td>
+        <td>170</td>
+    </tr>
+    <tr>
+        <td>側方遠距離攻擊</td>
+        <td>一般</td>
+        <td>場地階段</td>
+        <td>側身按 Y</td>
+        <td>可用寶可夢招式取消</td>
+        <td>90</td>
+    </tr>
+    <tr>
+        <td>側方遠距離攻擊：蓄力</td>
+        <td>一般</td>
+        <td>場地階段</td>
+        <td>側身長按 Y</td>
+        <td>可阻止對手</td>
+        <td>120</td>
+    </tr>
+    <tr>
+        <td>前方遠距離攻擊</td>
+        <td>一般</td>
+        <td>場地階段</td>
+        <td>按前 + Y</td>
+        <td>切換階段</td>
+        <td>60</td>
+    </tr>
+    <tr>
+        <td>後方遠距離攻擊</td>
+        <td>一般</td>
+        <td>場地階段</td>
+        <td>按後 + Y</td>
+        <td>對抓取攻擊有效</td>
+        <td>80</td>
+    </tr>
+    <tr>
+        <td>後方遠距離攻擊：蓄力</td>
+        <td>一般</td>
+        <td>場地階段</td>
+        <td>按後 + 長按 Y</td>
+        <td>貫穿反擊</td>
+        <td>100</td>
+    </tr>
+    <tr>
+        <td>跳躍遠距離攻擊</td>
+        <td>一般</td>
+        <td>場地階段</td>
+        <td>空中按 Y</td>
+        <td>按左右方向鍵可改變軌跡</td>
+        <td>30</td>
+    </tr>
+    <tr>
+        <td>跳躍遠距離攻擊：蓄力</td>
+        <td>一般</td>
+        <td>場地階段</td>
+        <td>空中長按 Y</td>
+        <td>無特殊效果</td>
+        <td>60</td>
     </tr>
     <tr>
         <td>抓取攻擊</td>
