本地化烈咬陸鯊的備註說明

--- a/烈咬陸鯊.html
+++ b/烈咬陸鯊.html
@@ -215,6 +215,70 @@ a:hover {
         <td>可抓取地面和空中的對手</td>
         <td>82</td>
     </tr>
+    <tr>
+        <td>抓取攻擊</td>
+        <td>抓取</td>
+        <td>全階段</td>
+        <td>Y + B</td>
+        <td>可在空中使用。可用寶可夢招式取消</td>
+        <td>80</td>
+    </tr>
+    <tr>
+        <td>抓取攻擊：蓄力</td>
+        <td>抓取</td>
+        <td>全階段</td>
+        <td>長按 Y + B</td>
+        <td>可在空中使用。可用寶可夢招式取消</td>
+        <td>100</td>
+    </tr>
+    <tr>
+        <td>前方抓取攻擊</td>
+        <td>抓取</td>
+        <td>全階段</td>
+        <td>按前 + Y + B</td>
+        <td>可在空中使用。可用寶可夢招式取消</td>
+        <td>80</td>
+    </tr>
+    <tr>
+        <td>前方抓取攻擊：蓄力</td>
+        <td>抓取</td>
+        <td>全階段</td>
+        <td>按前 + 長按 Y + B</td>
+        <td>可在空中使用。可用寶可夢招式取消</td>
+        <td>100</td>
+    </tr>
+    <tr>
+        <td>後方抓取攻擊</td>
+        <td>抓取</td>
+        <td>全階段</td>
+        <td>按後 + Y + B</td>
+        <td>可在空中使用。可用寶可夢招式取消</td>
+        <td>80</td>
+    </tr>
+    <tr>
+        <td>後方抓取攻擊：蓄力</td>
+        <td>抓取</td>
+        <td>全階段</td>
+        <td>按後 + 長按 Y + B</td>
+        <td>可在空中使用。可用寶可夢招式取消</td>
+        <td>100</td>
+    </tr>
+    <tr>
+        <td>反擊攻擊</td>
+        <td>反擊</td>
+        <td>全階段</td>
+        <td>X + A</td>
+        <td>可在空中使用。可用寶可夢招式取消</td>
+        <td>70</td>
+    </tr>
+    <tr>
+        <td>反擊攻擊：蓄力</td>
+        <td>反擊</td>
+        <td>全階段</td>
+        <td>X + 長按 A</td>
+        <td>可在空中使用。可用寶可夢招式取消</td>
+        <td>90</td>
+    </tr>
 </table><h2>標準招式</h2>
 <table>
     <tr>
