修正烈咬陸鯊招式表的按鈕組合和備註說明

--- a/烈咬陸鯊.html
+++ b/烈咬陸鯊.html
@@ -264,6 +264,14 @@ a:hover {
         <td>100</td>
     </tr>
     <tr>
+        <td>反擊貫穿</td>
+        <td>反擊</td>
+        <td>全階段</td>
+        <td>按 R + A</td>
+        <td>可在空中使用。對空中對手有效</td>
+        <td>70</td>
+    </tr>
+    <tr>
         <td>反擊攻擊</td>
         <td>反擊</td>
         <td>全階段</td>
@@ -356,6 +364,110 @@ a:hover {
         <td>0</td>
     </tr>
     <tr>
+        <td>弱攻擊</td>
+        <td>一般</td>
+        <td>全階段</td>
+        <td>按 Y</td>
+        <td>可用寶可夢招式取消</td>
+        <td>30</td>
+    </tr>
+    <tr>
+        <td>弱攻擊連擊</td>
+        <td>一般</td>
+        <td>全階段</td>
+        <td>按 Y，Y，Y</td>
+        <td>第三擊可用寶可夢招式取消</td>
+        <td>94</td>
+    </tr>
+    <tr>
+        <td>強攻擊</td>
+        <td>一般</td>
+        <td>全階段</td>
+        <td>按 X</td>
+        <td>可用寶可夢招式取消</td>
+        <td>40</td>
+    </tr>
+    <tr>
+        <td>強攻擊：蓄力</td>
+        <td>一般</td>
+        <td>全階段</td>
+        <td>蓄力後放開 X</td>
+        <td>可用寶可夢招式取消</td>
+        <td>60</td>
+    </tr>
+    <tr>
+        <td>前方強攻擊</td>
+        <td>一般</td>
+        <td>全階段</td>
+        <td>按前 + X</td>
+        <td>可用寶可夢招式取消</td>
+        <td>50</td>
+    </tr>
+    <tr>
+        <td>前方強攻擊：蓄力</td>
+        <td>一般</td>
+        <td>全階段</td>
+        <td>按前 + 長按 X</td>
+        <td>可用寶可夢招式取消</td>
+        <td>70</td>
+    </tr>
+    <tr>
+        <td>跳躍攻擊</td>
+        <td>一般</td>
+        <td>全階段</td>
+        <td>空中按 Y</td>
+        <td>可用寶可夢招式取消</td>
+        <td>40</td>
+    </tr>
+    <tr>
+        <td>跳躍強攻擊</td>
+        <td>一般</td>
+        <td>全階段</td>
+        <td>空中按 X</td>
+        <td>可用寶可夢招式取消</td>
+        <td>50</td>
+    </tr>
+    <tr>
+        <td>跳躍強攻擊：蓄力</td>
+        <td>一般</td>
+        <td>全階段</td>
+        <td>空中長按 X</td>
+        <td>可用寶可夢招式取消</td>
+        <td>70</td>
+    </tr>
+    <tr>
+        <td>衝刺攻擊</td>
+        <td>一般</td>
+        <td>全階段</td>
+        <td>衝刺時按 X</td>
+        <td>可用寶可夢招式取消</td>
+        <td>60</td>
+    </tr>
+    <tr>
+        <td>衝刺攻擊：蓄力</td>
+        <td>一般</td>
+        <td>全階段</td>
+        <td>衝刺時長按 X</td>
+        <td>可用寶可夢招式取消</td>
+        <td>80</td>
+    </tr>
+    <tr>
+        <td>側身攻擊</td>
+        <td>一般</td>
+        <td>全階段</td>
+        <td>側身按 X</td>
+        <td>可用寶可夢招式取消</td>
+        <td>40</td>
+    </tr>
+    <tr>
+        <td>側身攻擊：蓄力</td>
+        <td>一般</td>
+        <td>全階段</td>
+        <td>側身長按 X</td>
+        <td>可用寶可夢招式取消</td>
+        <td>60</td>
+    </tr>
+    <tr>
         <td>寶可連擊1</td>
         <td>一般</td>
         <td>場地階段</td>
@@ -368,7 +480,7 @@ a:hover {
         <td>一般</td>
         <td>場地階段</td>
         <td>按 Y</td>
-        <td>可用寶可夢招式取消。可阻止對手</td>
+        <td>可用寶可夢招式取消。可阻止對手。</td>
         <td>30</td>
     </tr>
     <tr>
@@ -698,6 +810,46 @@ a:hover {
         <td>Midair X</td>
         <td>無特殊效果</td>
         <td>60</td>
+    </tr>
+    <tr>
+        <td>防禦</td>
+        <td>無傷害</td>
+        <td>全階段</td>
+        <td>按 R</td>
+        <td>可防禦對手攻擊</td>
+        <td>0</td>
+    </tr>
+    <tr>
+        <td>防禦反擊</td>
+        <td>反擊</td>
+        <td>全階段</td>
+        <td>防禦成功時按 Y</td>
+        <td>防禦成功時可反擊</td>
+        <td>60</td>
+    </tr>
+    <tr>
+        <td>跳躍</td>
+        <td>無傷害</td>
+        <td>全階段</td>
+        <td>按 B</td>
+        <td>可躲避地面攻擊</td>
+        <td>0</td>
+    </tr>
+    <tr>
+        <td>二段跳</td>
+        <td>無傷害</td>
+        <td>全階段</td>
+        <td>跳躍時再按 B</td>
+        <td>可在空中再次跳躍</td>
+        <td>0</td>
+    </tr>
+    <tr>
+        <td>衝刺</td>
+        <td>無傷害</td>
+        <td>全階段</td>
+        <td>按左右方向鍵兩次</td>
+        <td>快速移動。可用寶可夢招式取消</td>
+        <td>0</td>
     </tr>
 </table>
     
