修正烈咬陸鯊招式表的英文內容，統一使用中文描述

--- a/烈咬陸鯊.html
+++ b/烈咬陸鯊.html
@@ -567,24 +567,24 @@ a:hover {
         <td>蓄力反擊</td>
         <td>反擊</td>
         <td>全階段</td>
-        <td>X + Hold A</td>
-        <td>反擊 attack pierce</td>
+        <td>按 X + 長按 A</td>
+        <td>反擊貫穿</td>
         <td>90</td>
     </tr>
     <tr>
         <td>蓄力強攻擊</td>
         <td>一般</td>
         <td>全階段</td>
-        <td>Charge and then release X</td>
-        <td>Can be activated in midair. 對空中對手有效.</td>
+        <td>蓄力後放開 X</td>
+        <td>可在空中使用。對空中對手有效</td>
         <td>150</td>
     </tr>
     <tr>
-        <td>Nosedive</td>
+        <td>俯衝攻擊</td>
         <td>無傷害</td>
         <td>全階段</td>
-        <td>Midair R</td>
-        <td>Drops downwards</td>
+        <td>空中按 R</td>
+        <td>向下俯衝</td>
         <td>0</td>
     </tr>
     <tr>
@@ -607,7 +607,7 @@ a:hover {
         <td>寶可連擊2</td>
         <td>一般</td>
         <td>場地階段</td>
-        <td>Side + Y, Y</td>
+        <td>側身按 Y，Y</td>
         <td>無特殊效果</td>
         <td>170</td>
     </tr>
@@ -615,15 +615,15 @@ a:hover {
         <td>側方遠距離攻擊</td>
         <td>一般</td>
         <td>場地階段</td>
-        <td>Side + Y</td>
+        <td>側身按 Y</td>
         <td>可用寶可夢招式取消</td>
         <td>90</td>
     </tr>
     <tr>
-        <td>Side Ranged Attack: Charge</td>
+        <td>側方遠距離攻擊：蓄力</td>
         <td>一般</td>
         <td>場地階段</td>
-        <td>Side + Hold Y</td>
+        <td>側身長按 Y</td>
         <td>可阻止對手</td>
         <td>120</td>
     </tr>
@@ -631,7 +631,7 @@ a:hover {
         <td>前方遠距離攻擊</td>
         <td>一般</td>
         <td>場地階段</td>
-        <td>Forward + Y</td>
+        <td>按前 + Y</td>
         <td>切換階段</td>
         <td>60</td>
     </tr>
@@ -639,32 +639,32 @@ a:hover {
         <td>後方遠距離攻擊</td>
         <td>一般</td>
         <td>場地階段</td>
-        <td>Backward + Y</td>
-        <td>Effective against 抓取 Attacks</td>
+        <td>按後 + Y</td>
+        <td>對抓取攻擊有效</td>
         <td>80</td>
     </tr>
     <tr>
-        <td>Backward Ranged Attack: Charge</td>
+        <td>後方遠距離攻擊：蓄力</td>
         <td>一般</td>
         <td>場地階段</td>
-        <td>Backward + Hold Y</td>
-        <td>反擊 attack pierce.</td>
+        <td>按後 + 長按 Y</td>
+        <td>貫穿反擊</td>
         <td>100</td>
     </tr>
     <tr>
         <td>跳躍遠距離攻擊</td>
         <td>一般</td>
         <td>場地階段</td>
-        <td>Midair Y</td>
-        <td>Change trajectory by pressing D-Pad left or right</td>
+        <td>空中按 Y</td>
+        <td>按左右方向鍵可改變軌跡</td>
         <td>30</td>
     </tr>
     <tr>
-        <td>Jumping Ranged Attack: Charge</td>
+        <td>跳躍遠距離攻擊：蓄力</td>
         <td>一般</td>
         <td>場地階段</td>
-        <td>Midair Hold Y</td>
-        <td>Change trajectory by pressing D-Pad left or right</td>
+        <td>空中長按 Y</td>
+        <td>按左右方向鍵可改變軌跡</td>
         <td>40</td>
     </tr>
     <tr>
@@ -687,7 +687,7 @@ a:hover {
         <td>跳躍攻擊</td>
         <td>一般</td>
         <td>場地階段</td>
-        <td>Midair X</td>
+        <td>空中按 X</td>
         <td>切換階段</td>
         <td>100</td>
     </tr>
