修正烈咬陸鯊招式表的高姿勢相關招式和說明

--- a/烈咬陸鯊.html
+++ b/烈咬陸鯊.html
@@ -544,8 +544,8 @@ a:hover {
         <td>一般</td>
         <td>場地階段</td>
         <td>空中長按 Y</td>
-        <td>無特殊效果</td>
-        <td>60</td>
+        <td>按左右方向鍵可改變軌跡</td>
+        <td>40</td>
     </tr>
     <tr>
         <td>抓取攻擊</td>
@@ -679,9 +679,9 @@ a:hover {
         <td>蓄力追蹤攻擊</td>
         <td>一般</td>
         <td>場地階段</td>
-        <td>X, Hold X</td>
-        <td>貫穿反擊 and breaks the guard</td>
-        <td>160</td>
+        <td>按 X，長按 X</td>
+        <td>貫穿反擊並破防</td>
+        <td>120</td>
     </tr>
     <tr>
         <td>跳躍攻擊</td>
@@ -695,8 +695,16 @@ a:hover {
         <td>高姿勢</td>
         <td>無傷害</td>
         <td>對戰階段</td>
-        <td>Hold Up</td>
-        <td>Resists hit stun against attacks that hit low. 反擊 attacks after resisting close range attacks</td>
+        <td>長按上</td>
+        <td>可抵抗低位攻擊的硬直。抵抗近距離攻擊後可反擊</td>
+        <td>0</td>
+    </tr>
+    <tr>
+        <td>貫穿反擊</td>
+        <td>無傷害</td>
+        <td>對戰階段</td>
+        <td>長按上</td>
+        <td>可抵抗低位攻擊的硬直。抵抗近距離攻擊後可反擊</td>
         <td>0</td>
     </tr>
     <tr>
@@ -719,17 +727,17 @@ a:hover {
         <td>前方弱攻擊</td>
         <td>一般</td>
         <td>對戰階段</td>
-        <td>Forward + Y, Y</td>
-        <td>Transition to Running Stance with D-Pad 前 + Y, 長按 Y</td>
+        <td>按前 + Y，Y</td>
+        <td>按前 + Y，長按 Y 可切換至跑步姿勢</td>
         <td>120</td>
     </tr>
     <tr>
         <td>後方弱攻擊</td>
         <td>一般</td>
         <td>對戰階段</td>
-        <td>Backward + Y</td>
+        <td>按後 + Y</td>
         <td>無特殊效果</td>
-        <td>60</td>
+        <td>80</td>
     </tr>
     <tr>
         <td>高姿勢弱攻擊</td>
@@ -759,9 +767,9 @@ a:hover {
         <td>空中弱攻擊</td>
         <td>一般</td>
         <td>對戰階段</td>
-        <td>Midair Y</td>
-        <td>Can be cancelled with Pokémon moves or Nosedive</td>
-        <td>27</td>
+        <td>空中按 Y</td>
+        <td>可用寶可夢招式或俯衝攻擊取消</td>
+        <td>40</td>
     </tr>
     <tr>
         <td>Midair Weak Attack ~ Strong Attack Follow-up</td>
@@ -791,9 +799,9 @@ a:hover {
         <td>高姿勢強攻擊</td>
         <td>一般</td>
         <td>對戰階段</td>
-        <td>Up + X</td>
-        <td>Effective against 抓取 Attacks</td>
-        <td>100</td>
+        <td>按上 + X</td>
+        <td>對抓取攻擊有效</td>
+        <td>80</td>
     </tr>
     <tr>
         <td>低姿勢強攻擊</td>
